# minishell

./: .gitignore  .gitmodules  .history  CMakeLists.txt  Makefile  README.md
headers/: .history  ansi_colors.h  builtins.h  command_utils.h  dollar_sign.h  env.h  error_utils.h  escape_char.h  execute_input.h  handle_special_chars.h  heredoc.h  init.h  input_execution.h  input_parsing.h  input_parsing_utils.h  libft_extra.h  main.h  parse_input.h  parse_input_utils.h  parser.h  quote_char.h  redirect_input.h  redirect_output.h  semicomma.h  signals.h  special_chars.h  special_chars_utils.h  terminate_and_free.h  types.h
headers/built-ins/: __cd.h  __echo.h  __env.h  __exit.h  __export.h  __pwd.h  __unset.h  builtins.h
headers/env/: env.h  env_accessors.h
headers/executor/: exec_utils.h  execute_input.h  heredoc.h
headers/parser/: dollar_sign.h  escape_char.h  parse_input.h  parse_input_utils.h  quote_char.h  redirect_input.h  redirect_output.h  semicomma.h  special_chars.h  special_chars_utils.h
srcs/: builtin_utils.c  builtins.c  command_utils.c  dollar_sign.c  env.c  error_utils.c  escape_char.c  execute_input.c  ft_ultra_strjoin.c  handle_special_chars.c  heredoc.c  init.c  input_execution.c  input_parsing.c  input_parsing_utils.c  libft_extra.c  main.c  memory_utils.c  parse_input.c  parse_input_utils.c  parser.c  quote_char.c  redirect_input.c  redirect_output.c  semicomma.c  signals.c  special_chars.c  special_chars_utils.c  str  terminate_and_free.c
srcs/built-ins/: __cd.c  __echo.c  __env.c  __exit.c  __export.c  __pwd.c  __unset.c  builtin_utils.c  builtins.c
srcs/env/: env.c  env_accessors.c
srcs/executor/: exec_utils.c  execute_input.c  heredoc.c
srcs/parser/: dollar_sign.c  escape_char.c  parse_input.c  quote_char.c  (+6 more)
